letter spacing fixed

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -3,10 +3,9 @@ body{
 }
 h1 {
   color: #000000;
-  font-size: clamp(3rem, 3vw, 3.5rem); // Responsive font size
+  font-size: clamp(3rem, 5vw, 3.5rem); // Responsive font size
   line-height: 1.2;
   margin: -10px;
-  margin-bottom: 1rem !important;
   font-family: 'CoolVetica';
   font-weight: 400;
   position: relative;
@@ -23,22 +22,15 @@ h1 {
 
 h2 {
   color: #000000;
-  margin-bottom: 1rem;
-  margin-top: 1rem !important;
+  margin: 20px 0;
   font-weight: 400;
-  font-size: clamp(1rem, 3vw, 1.5rem); // Responsive font size
+  font-size: clamp(1rem, 5vw, 1.5rem); // Responsive font size
   width: 100%;
   // font-family: ar-serif ;
   letter-spacing: clamp(0.5px, 0.8vw, 1.5px);
-  // letter-spacing: 4px;
-  // animation: fadeIn 1s 1.8s backwards;
-  text-align: justify;
+  animation: fadeIn 1s 1.8s backwards;
+  // text-align: justify !important;
 }
-
-p {
-  text-align: justify;
-}
-
 
 .stage-cube-cont {
   position: relative;
@@ -79,13 +71,13 @@ p {
 //     font-size: clamp(2rem, 3vw, 3rem)!important;
 //  }
   h2 {
-    font-size: clamp(1rem, 3vw, 1.5rem) ;
+    font-size: clamp(1rem, 5vw, 1.5rem) ;
     // line-height: 1.6;
     width: 100%;
     font-family: Helvetica;
     font-weight: 400;
     color: #000000;
-    // margin-top: 1rem;
+    margin-top: 1rem;
   }
 }
   .abt-pg {
@@ -144,13 +136,13 @@ p {
 //     font-size: clamp(2rem, 3vw, 3rem)!important;
 //  }
   h2 {
-    font-size: clamp(1rem, 3vw, 1.5rem) ;
+    font-size: clamp(1rem, 5vw, 1.5rem) ;
     // line-height: 1.6;
     width: 100%;
     font-family: Helvetica;
     font-weight: 400;
     color: #000000;
-    // margin-top: 1rem;
+    margin-top: 1rem;
     justify-items: auto;
       
 
