--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -81,7 +81,7 @@
     .flat-button {
       color: #115173;
       font-size: 18px;
-      letter-spacing: 3px;
+      letter-spacing: 1px;
       text-decoration: none;
       padding: 8px 10px;
       border: 1px solid #115173;
@@ -143,7 +143,7 @@ h2{
         font-size: 20px;
         width: 50%;
         font-family: Helvetica;
-        letter-spacing:3px;
+        letter-spacing: clamp(0.5px, 0.8vw, 1.5px);
         animation: fadeIn 1s 1.8s backwards;
     }
 
