--- a/src/components/Detailslist/Project1.scss
+++ b/src/components/Detailslist/Project1.scss
@@ -88,7 +88,7 @@
     margin-bottom: 1.2rem;
     margin-top: -0.5rem;
     font-style: italic;
-    letter-spacing: 0.07em;
+    // letter-spacing: 0.07em;
   }
 
   strong {
