--- a/src/components/Research/Research.scss
+++ b/src/components/Research/Research.scss
@@ -10,7 +10,7 @@
   .page-title {
     margin-bottom: clamp(1rem, 5vh, 2.5rem);
     // font-size: clamp(2rem, 5vw, 3rem); // Responsive font size
-    font-weight: bold;
+    // font-weight: bold;
     text-align: center;
   }
 
@@ -85,7 +85,7 @@
   }
 
   .page-title {
-    font-size: clamp(1.6rem, 5vw, 2.4rem);
+    // font-size: clamp(1.6rem, 5vw, 2.4rem);
     margin-top: 10rem; /* push the title a bit lower */
     margin-bottom: 1rem;
     text-align: center;
